# Nordic

./: meson.build
assets/: meson.build
gtk-2.0/: gtkrc  main.rc  meson.build
gtk-2.0/apps/: gimp.rc
gtk-3.0/: _colors-public.scss  _common.scss  _drawing.scss  gtk-dark.scss  meson.build
gtk-3.0/apps/: _budgie.scss  _geary.scss  _gnome.scss  _nemo.scss  _unity.scss
gtk-3.0/widgets/: _action-bars.scss  _app-notifications.scss  _base-states.scss  _buttons.scss  _calendar.scss  _checks-radios.scss  _color-chooser.scss  _dialogs.scss  _entries.scss  _file-chooser.scss  _floating-bar.scss  _frames.scss  _granite.scss  _header-bars.scss  _infobars.scss  _level-bars.scss  _links.scss  _lists.scss  _menus.scss  _misc.scss  _notebooks.scss  _paned.scss  _popovers.scss  _print-dialog.scss  _progress-bars.scss  _scales.scss  _scrollbars.scss  _sidebar.scss  _spinbuttons.scss  _switches.scss  _toolbars.scss  _touch-copy-paste.scss  _treeviews.scss  _windows.scss
gtk-4.0/: meson.build
gtk-4.0/widgets/: _checks-radios.scss
kde/kvantum/: meson.build
kde/kvantum/Nordic-Darker-Solid/: Nordic-Darker-Solid.kvconfig
kvantum/: Nordic-Darker.kvconfig  meson.build
metacity-1/: meson.build  metacity-theme-3.xml  metacity-theme.xml
src/: list-assets.py  meson.build
