install_data(
  'metacity-theme.xml',
  rename : 'metacity-theme-1.xml',
  install_dir : prefix / 'share' / 'themes' / 'Nordic-Darker' / 'metacity-1'
)

install_data(
  'metacity-theme.xml',
  rename : 'metacity-theme-2.xml',
  install_dir : prefix / 'share' / 'themes' / 'Nordic-Darker' / 'metacity-1'
)

install_data(
  'metacity-theme-3.xml',
  install_dir : prefix / 'share' / 'themes' / 'Nordic-Darker' / 'metacity-1'
)

install_data(
  'thumbnail.png',
  install_dir : prefix / 'share' / 'themes' / 'Nordic-Darker' / 'metacity-1'
)
